fix z-index issue

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -78,7 +78,7 @@ html {
 
 .timeline-section {
   @apply bg-BEIGE;
-  @apply absolute top-[10px] left-[10px] lg:left-30 lg:top-30;
+  @apply absolute top-[10px] left-[10px] lg:left-30 lg:top-30 z-50;
   @apply rounded-30 lg:rounded-90 p-15 lg:p-60;
 
   width: calc(100dvw - 20px);
